--- a/frontend/src/styles/css/index.css
+++ b/frontend/src/styles/css/index.css
@@ -263,7 +263,6 @@ img {
       .header .nav .menu .menuLinks {
         display: flex;
         flex-direction: column;
-        margin: 1.6rem 0;
         padding: 1rem;
         width: 96%;
         justify-content: flex-end;
@@ -281,12 +280,12 @@ img {
             color: #fca656; }
         @media screen and (min-width: 999px) {
           .header .nav .menu .menuLinks {
-            justify-content: space-evenly;
+            justify-content: flex-end;
             max-width: 70rem;
             flex-direction: row;
             margin: 0.2rem 0; }
             .header .nav .menu .menuLinks a {
-              padding: 1rem 0; } }
+              padding: 1rem 2vw; } }
       .header .nav .menu .menuActions {
         display: flex;
         flex-direction: column;
@@ -311,7 +310,6 @@ img {
             color: #fff; }
         @media screen and (min-width: 999px) {
           .header .nav .menu .menuActions {
-            padding-left: 1.3rem;
             flex-direction: row; } }
         .header .nav .menu .menuActions .search {
           margin: 1.3rem;
@@ -349,7 +347,7 @@ img {
                 .header .nav .menu .menuActions .search .toggleSearch input[type="text"].openSearch::placeholder {
                   color: rgba(255, 255, 255, 0.432);
                   font-style: italic; }
-                @media screen and (min-width: 769px) {
+                @media screen and (min-width: 768px) {
                   .header .nav .menu .menuActions .search .toggleSearch input[type="text"].openSearch {
                     right: 0;
                     border: 2px solid #fff; } }
