--- a/frontend/src/styles/scss/components/_mainContent.scss
+++ b/frontend/src/styles/scss/components/_mainContent.scss
@@ -1,7 +1,7 @@
 .mainContent {
 	display: flex;
 	flex-wrap: wrap;
-	min-height: 100vh;
+	height: 105vh;
 	flex-direction: row;
 	background: $light-blue;
 	justify-content: space-around;
@@ -21,7 +21,6 @@
 		}
 		.cardDesc {
 			padding: 1rem 1.3rem 0.7rem;
-			// height: auto;
 
 			h4 {
 				color: $blue;
@@ -55,6 +54,7 @@
 	@media screen and (min-width: 999px) {
 		flex-direction: row;
 		padding: 6rem 3%;
+
 		.card {
 			width: 29%;
 			min-width: 14rem;
@@ -62,7 +62,8 @@
 		}
 	}
 	@media screen and (min-width: 1199px) {
-		padding: 6rem 5.5rem;
+		padding: 6rem 5.5rem 7rem;
+
 		.card {
 			width: 29%;
 			min-width: 14rem;
