--- a/frontend/src/styles/scss/modules/_animations.scss
+++ b/frontend/src/styles/scss/modules/_animations.scss
@@ -15,3 +15,15 @@
 		height: 0px;
 	}
 }
+
+@keyframes pulse {
+	0% {
+		transform: scale(1);
+	}
+	50% {
+		transform: scale(1.05);
+	}
+	100% {
+		transform: scale(1);
+	}
+}
