--- a/frontend/src/styles/css/index.css
+++ b/frontend/src/styles/css/index.css
@@ -169,6 +169,14 @@ img {
   100% {
     height: 0px; } }
 
+@keyframes pulse {
+  0% {
+    transform: scale(1); }
+  50% {
+    transform: scale(1.05); }
+  100% {
+    transform: scale(1); } }
+
 .app {
   margin: auto;
   position: relative; }
@@ -182,7 +190,16 @@ img {
   height: 100vh;
   background: linear-gradient(0deg, rgba(21, 44, 68, 0.78), rgba(18, 37, 52, 0.16)), url("../../Assets/images/man-consulting.jpeg");
   background-size: cover;
-  color: #fff; }
+  color: #fff;
+  /* -------------------------------------------------------------------------- */
+  /*                                Logo && Menu                                */
+  /* -------------------------------------------------------------------------- */
+  /* -------------------------------------------------------------------------- */
+  /*                          Call to Action in header                          */
+  /* -------------------------------------------------------------------------- */
+  /* -------------------------------------------------------------------------- */
+  /*                          "How can we help" prompt                         */
+  /* -------------------------------------------------------------------------- */ }
   .header a {
     color: #fff;
     padding: 1rem;
@@ -197,7 +214,10 @@ img {
     background: rgba(21, 44, 68, 0.9);
     width: 100%;
     transition: padding 200ms linear;
-    z-index: 999; }
+    z-index: 999;
+    /* -------------------------------------------------------------------------- */
+    /*                                 Menu Links                                 */
+    /* -------------------------------------------------------------------------- */ }
     @media screen and (min-width: 999px) {
       .header .nav {
         width: 92%;
@@ -295,7 +315,10 @@ img {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center; }
+        align-items: center;
+        /* -------------------------------------------------------------------------- */
+        /*                            Search bar in Menu bar                           */
+        /* -------------------------------------------------------------------------- */ }
         .header .nav .menu .menuActions button {
           width: 9.9rem;
           height: 2.5rem;
@@ -444,10 +467,8 @@ img {
     align-items: center;
     bottom: 0;
     width: 100%;
-    padding: 1rem 0;
     background: rgba(21, 57, 94, 0.7);
-    line-height: 1.3rem;
-    padding-left: 0; }
+    line-height: 1.3rem; }
     @media (min-width: 768px) {
       .header .subMenu {
         height: 74px;
@@ -457,7 +478,13 @@ img {
     .header .subMenu .subMenuPrompt {
       display: flex;
       align-items: center;
-      flex-direction: column; }
+      flex-direction: row;
+      margin-left: -20px; }
+      .header .subMenu .subMenuPrompt .subMenuIcon {
+        animation: pulse 1200ms infinite; }
+        @media screen and (min-width: 999px) {
+          .header .subMenu .subMenuPrompt .subMenuIcon {
+            animation: none; } }
       @media (min-width: 768px) {
         .header .subMenu .subMenuPrompt {
           flex-direction: row;
@@ -469,8 +496,13 @@ img {
       padding: 0 1rem;
       text-align: center;
       flex-direction: column; }
-      .header .subMenu .subMenuLinks .subMenuIcon {
-        display: none; }
+      .header .subMenu .subMenuLinks.showSubMenu {
+        height: 9rem;
+        overflow: hidden;
+        transition: height 200ms linear; }
+      .header .subMenu .subMenuLinks.hideSubMenu {
+        height: 0.3rem;
+        transition: height 200ms linear; }
       .header .subMenu .subMenuLinks a {
         padding: 0.7rem;
         font-size: 0.9rem; }
@@ -486,6 +518,15 @@ img {
           flex-direction: row; }
           .header .subMenu .subMenuLinks a {
             padding: 1rem; } }
+      @media screen and (min-width: 999px) {
+        .header .subMenu .subMenuLinks {
+          /* -------------------------------------------------------------------------- */
+          /*                     Disables the SubMenu display toggle                    */
+          /* -------------------------------------------------------------------------- */ }
+          .header .subMenu .subMenuLinks.showSubMenu {
+            height: 3.2rem; }
+          .header .subMenu .subMenuLinks.hideSubMenu {
+            height: 3.2rem; } }
 
 .mainContent {
   display: flex;
