--- a/frontend/src/styles/css/index.css
+++ b/frontend/src/styles/css/index.css
@@ -273,18 +273,25 @@ img {
       justify-content: flex-end;
       text-align: center;
       overflow: hidden;
-      animation: showMenu 300ms forwards;
-      width: 100%; }
+      width: 100%;
+      height: 3rem; }
       .header .nav .menu.hideMenu {
         overflow: hidden;
-        animation: hideMenu 300ms forwards; }
+        height: 0;
+        transition: height 200ms linear; }
+      .header .nav .menu.showMenu {
+        height: 27rem;
+        transition: height 200ms linear; }
       @media screen and (min-width: 999px) {
         .header .nav .menu {
           flex-direction: row;
           animation: none 300ms linear;
           text-align: right; }
           .header .nav .menu.hideMenu {
-            animation: none; } }
+            overflow: hidden;
+            height: 5rem; }
+          .header .nav .menu.showMenu {
+            height: 5rem; } }
       .header .nav .menu .menuLinks {
         display: flex;
         flex-direction: column;
@@ -518,7 +525,7 @@ img {
           flex-direction: row; }
           .header .subMenu .subMenuLinks a {
             padding: 1rem; } }
-      @media screen and (min-width: 999px) {
+      @media screen and (min-width: 768px) {
         .header .subMenu .subMenuLinks {
           /* -------------------------------------------------------------------------- */
           /*                     Disables the SubMenu display toggle                    */
