--- a/frontend/src/styles/scss/components/_header.scss
+++ b/frontend/src/styles/scss/components/_header.scss
@@ -106,20 +106,32 @@
 			justify-content: flex-end;
 			text-align: center;
 			overflow: hidden;
-			animation: showMenu 300ms forwards;
 			width: 100%;
+			height: 3rem;
 
 			&.hideMenu {
 				overflow: hidden;
-				animation: hideMenu 300ms forwards;
+				height: 0;
+				transition: height 200ms linear;
+			}
+
+			&.showMenu {
+				height: 27rem;
+				transition: height 200ms linear;
 			}
 
 			@media screen and (min-width: 999px) {
 				flex-direction: row;
 				animation: none 300ms linear;
 				text-align: right;
+
 				&.hideMenu {
-					animation: none;
+					overflow: hidden;
+					height: 5rem;
+				}
+
+				&.showMenu {
+					height: 5rem;
 				}
 			}
 
@@ -388,7 +400,7 @@
 					padding: 1rem;
 				}
 			}
-			@media screen and (min-width: 999px) {
+			@media screen and (min-width: 768px) {
 				/* -------------------------------------------------------------------------- */
 				/*                     Disables the SubMenu display toggle                    */
 				/* -------------------------------------------------------------------------- */
