--- a/frontend/src/styles/scss/components/_header.scss
+++ b/frontend/src/styles/scss/components/_header.scss
@@ -94,7 +94,7 @@
 		}
 
 		/* -------------------------------------------------------------------------- */
-		/*                                 Menu Links                                 */
+		/*                                 Nav Links                                 */
 		/* -------------------------------------------------------------------------- */
 
 		.menu {
@@ -276,8 +276,8 @@
 
 			h1 {
 				text-transform: uppercase;
-				font-size: 3.4vmax;
-				line-height: 3.4rem;
+				font-size: 4vmax;
+				line-height: 2.8rem;
 
 				span:last-of-type {
 					font-weight: 700;
@@ -299,7 +299,9 @@
 			align-items: center;
 			letter-spacing: 0.02rem;
 			font-size: 0.85rem;
-
+			p {
+				padding: 1rem;
+			}
 			@media screen and (min-width: 999px) {
 				flex-direction: row;
 				margin: 2rem 0;
@@ -313,13 +315,13 @@
 			button {
 				@include buttons(13.7, 3.7, $white, $blue);
 				@include borders($pixel: 3, $color: $bright-blue);
-				margin-bottom: 2rem;
+				// margin-bottom: 2rem;
 				&:hover {
 					@include hover($white, $blue);
 				}
 
 				@media screen and (min-width: 768px) {
-					margin-right: 2rem;
+					// margin-right: 2rem;
 					margin-bottom: 0;
 				}
 			}
