--- a/frontend/src/styles/css/index.css
+++ b/frontend/src/styles/css/index.css
@@ -265,6 +265,8 @@ img {
               text-transform: uppercase;
               font-size: 0.8rem;
               letter-spacing: 0.16rem; }
+    .header .nav .menuIcon:hover {
+      cursor: pointer; }
     .header .nav .menu {
       display: flex;
       flex-direction: column;
@@ -273,22 +275,21 @@ img {
       justify-content: flex-end;
       text-align: center;
       overflow: hidden;
-      width: 100%; }
+      width: 100%;
+      height: 0;
+      transition: height 200ms linear; }
       .header .nav .menu.hideMenu {
         overflow: hidden;
         height: 0;
         transition: height 200ms linear; }
       .header .nav .menu.showMenu {
         height: 27rem;
-        transition: height 200ms linear; }
+        transition: all 200ms linear; }
       @media screen and (min-width: 999px) {
         .header .nav .menu {
+          height: 5rem;
           flex-direction: row;
-          animation: none 300ms linear;
           text-align: right; }
-          .header .nav .menu.hideMenu {
-            overflow: hidden;
-            height: 5rem; }
           .header .nav .menu.showMenu {
             height: 5rem; } }
       .header .nav .menu .menuLinks {
