--- a/frontend/src/styles/scss/components/_header.scss
+++ b/frontend/src/styles/scss/components/_header.scss
@@ -96,7 +96,11 @@
 		/* -------------------------------------------------------------------------- */
 		/*                                 Nav Links                                 */
 		/* -------------------------------------------------------------------------- */
-
+		.menuIcon {
+			&:hover {
+				cursor: pointer;
+			}
+		}
 		.menu {
 			display: flex;
 			flex-direction: column;
@@ -106,6 +110,8 @@
 			text-align: center;
 			overflow: hidden;
 			width: 100%;
+			height: 0;
+			transition: height 200ms linear;
 
 			&.hideMenu {
 				overflow: hidden;
@@ -115,18 +121,18 @@
 
 			&.showMenu {
 				height: 27rem;
-				transition: height 200ms linear;
+				transition: all 200ms linear;
 			}
 
 			@media screen and (min-width: 999px) {
+				height: 5rem;
 				flex-direction: row;
-				animation: none 300ms linear;
 				text-align: right;
 
-				&.hideMenu {
-					overflow: hidden;
-					height: 5rem;
-				}
+				// &.hideMenu {
+				// 	overflow: hidden;
+				// 	height: 5rem;
+				// }
 
 				&.showMenu {
 					height: 5rem;
