--- a/frontend/src/styles/css/index.css
+++ b/frontend/src/styles/css/index.css
@@ -243,7 +243,10 @@ img {
           width: 30%;
           padding: 0;
           justify-content: center;
-          min-width: 18rem; }
+          min-width: 18rem;
+          /* -------------------------------------------------------------------------- */
+          /*        BRING THIS ONE INTO MENU ICON TIFFANY WHAT IS WRONG WITH YOU        */
+          /* -------------------------------------------------------------------------- */ }
           .header .nav .logoMenuIcon .menuIcon {
             display: none; } }
       @media screen and (min-width: 1199px) {
@@ -265,8 +268,33 @@ img {
               text-transform: uppercase;
               font-size: 0.8rem;
               letter-spacing: 0.16rem; }
-    .header .nav .menuIcon:hover {
-      cursor: pointer; }
+    .header .nav .menuIcon {
+      width: 2.4rem;
+      height: 2.2rem; }
+      .header .nav .menuIcon span {
+        position: relative;
+        display: block;
+        top: 12px;
+        width: 2.4rem;
+        padding: 0.4rem 0;
+        margin-top: -0.3rem;
+        border-bottom: 2px solid #fff;
+        transform: rotate(-180deg);
+        transition: all 200ms ease-out; }
+      .header .nav .menuIcon span.mIconAnimate {
+        transition: all 200ms ease-out; }
+        .header .nav .menuIcon span.mIconAnimate:nth-child(1) {
+          top: 10px;
+          left: -4px;
+          transform: rotate(-45deg); }
+        .header .nav .menuIcon span.mIconAnimate:nth-child(2) {
+          display: none; }
+        .header .nav .menuIcon span.mIconAnimate:nth-child(3) {
+          top: 0px;
+          left: 5px;
+          transform: rotate(45deg); }
+      .header .nav .menuIcon:hover {
+        cursor: pointer; }
     .header .nav .menu {
       display: flex;
       flex-direction: column;
@@ -415,7 +443,7 @@ img {
         text-transform: uppercase;
         font-size: 4vmax;
         line-height: 6vmax; }
-        .header .cta .ctaMessage h1 span:last-of-type {
+        .header .cta .ctaMessage h1 span:la st-of-type {
           font-weight: 700; }
       @media screen and (min-width: 768px) {
         .header .cta .ctaMessage {
