--- a/frontend/src/styles/css/index.css
+++ b/frontend/src/styles/css/index.css
@@ -715,9 +715,7 @@ footer {
             margin: 0; }
             footer .contact .addressSocial address div {
               display: flex;
-              flex-direction: column; }
-            footer .contact .addressSocial address h4 {
-              font-size: 2vw; } }
+              flex-direction: column; } }
       @media screen and (min-width: 1300px) {
         footer .contact .addressSocial {
           flex-direction: row; }
