--- a/frontend/src/styles/scss/components/_header.scss
+++ b/frontend/src/styles/scss/components/_header.scss
@@ -256,7 +256,7 @@
 							}
 
 							&.openSearch {
-								padding: 1rem 4rem;
+								padding: 1rem 3em;
 								background: $search-blue;
 								width: 50vw;
 								color: $white;
