The background image from CSS won't load

--- a/frontend/src/styles/css/index.css
+++ b/frontend/src/styles/css/index.css
@@ -188,7 +188,7 @@ img {
   top: 0;
   width: 100%;
   height: 100vh;
-  background: linear-gradient(0deg, rgba(21, 44, 68, 0.78), rgba(18, 37, 52, 0.16)), url("../../Assets/images/man-consulting.jpeg");
+  background: red;
   background-size: cover;
   color: #fff;
   /* -------------------------------------------------------------------------- */
