--- a/frontend/src/styles/scss/components/_header.scss
+++ b/frontend/src/styles/scss/components/_header.scss
@@ -5,8 +5,9 @@
 	top: 0;
 	width: 100%;
 	height: 100vh;
-	background: linear-gradient(0deg, $grayish-blue, rgba(18, 37, 52, 0.16)),
-		url('../../Assets/images/man-consulting.jpeg');
+	// background: linear-gradient(0deg, $grayish-blue, rgba(18, 37, 52, 0.16)),
+	// 	url('../../Assets/images/manConsulting.jpeg');
+	background: red;
 	background-size: cover;
 	color: $white;
 
